2010-06-14  Chang Shu  <chang.shu@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Unskip canvas/philip/tests/2d.shadow.enable.x.html
        and canvas/philip/tests/2d.shadow.enable.y.html.

        https://bugs.webkit.org/show_bug.cgi?id=40434

        * platform/qt/Skipped:

2010-06-14  Dan Bernstein  <mitz@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/7752961> Unevenly distributed space in justified text
        https://bugs.webkit.org/show_bug.cgi?id=36105

        * fast/text/justify-padding-distribution-expected.checksum: Added.
        * fast/text/justify-padding-distribution-expected.png: Added.
        * fast/text/justify-padding-distribution-expected.txt: Added.
        * fast/text/justify-padding-distribution.html: Added.
        * platform/mac/css1/box_properties/clear_float-expected.checksum:
        * platform/mac/css1/box_properties/clear_float-expected.png:
        * platform/mac/css1/box_properties/float_elements_in_series-expected.checksum:
        * platform/mac/css1/box_properties/float_elements_in_series-expected.png:
        * platform/mac/css1/box_properties/float_on_text_elements-expected.checksum:
        * platform/mac/css1/box_properties/float_on_text_elements-expected.png:
        * platform/mac/css1/text_properties/text_align-expected.checksum:
        * platform/mac/css1/text_properties/text_align-expected.png:
        * platform/mac/css2.1/t0905-c5525-fltcont-00-d-g-expected.checksum:
        * platform/mac/css2.1/t0905-c5525-fltcont-00-d-g-expected.png:
        * platform/mac/css2.1/t0905-c5525-fltwidth-00-c-g-expected.checksum:
        * platform/mac/css2.1/t0905-c5525-fltwidth-00-c-g-expected.png:
        * platform/mac/css2.1/t1602-c546-txt-align-00-b-expected.checksum:
        * platform/mac/css2.1/t1602-c546-txt-align-00-b-expected.png:
        * platform/mac/fast/multicol/float-avoidance-expected.checksum:
        * platform/mac/fast/multicol/float-avoidance-expected.png: