@@ -1,3 +1,13 @@
 
-Test passed
+This test makes sure that the AX parent chain hierarchy with iframes is correct
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+PASS parentIframeWebArea.isEqual(iframeScrollArea) is true
+PASS parentIframeScrollArea.isEqual(group1) is true
+PASS parentGroup1.isEqual(webArea) is true
+PASS successfullyParsed is true
+
+TEST COMPLETE
 
